webserver/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx # 🔥 Correspond aux labels des Pods gérés
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: nginx-web-storage
        hostPath:
          path: /var/www/nginx-kube
          type: Directory
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: nginx-port
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: nginx-web-storage
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  #type: LoadBalancer
  selector:
    app: nginx # 🔥 Sélectionne les pods avec ce label
  ports:
  - name: port-web
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbal
spec:
  type: LoadBalancer
  selector:
    app: nginx # 🔥 Sélectionne les pods avec ce label
  ports:
  - name: port-web
    protocol: TCP
    port: 81
    targetPort: 80
---
