webserver/webserver-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web-tls
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`altaif4.fr`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  tls:
    certResolver: myresolver
